--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,5 +22,7 @@ jobs:
       
       - name: Build 
         run: |
-          docker build -t ghcr.io/${{ github.repository }}:latest .
+          docker build -t ghcr.io/${{ github.repository }}:latest --target base .
+          docker build -t ghcr.io/${{ github.repository }}_rust:latest .
           docker push ghcr.io/${{ github.repository }}:latest
+          docker push ghcr.io/${{ github.repository }}_rust:latest
