--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,15 +10,25 @@ jobs:
     runs-on: rehosting-arc
 
     steps:
-      - name: 'Checkout code'
-        uses: actions/checkout@v4
       
       - name: 'Login to Github Container Registry'
-        uses: docker/login-action@v3
+        uses: docker/login-action@v3.4.0
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3.4.0
+        with:
+          username: rehosting
+          password: ${{secrets.DOCKERHUB_TOKEN}}
+      
+      - name: 'Checkout code'
+        uses: actions/checkout@v4
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       
       - name: Build 
         run: |
@@ -26,3 +36,7 @@ jobs:
           docker build -t ghcr.io/${{ github.repository }}_rust:latest .
           docker push ghcr.io/${{ github.repository }}:latest
           docker push ghcr.io/${{ github.repository }}_rust:latest
+          docker tag ghcr.io/${{ github.repository }}:latest rehosting/${{ github.repository }}:latest
+          docker tag ghcr.io/${{ github.repository }}_rust:latest rehosting/${{ github.repository }}:latest
+          docker push rehosting/${{ github.repository }}:latest
+          docker push rehosting/${{ github.repository }}_rust:latest
