publish: drop rust for the moment

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,10 +33,10 @@ jobs:
       - name: Build 
         run: |
           docker build -t ghcr.io/${{ github.repository }}:latest --target base .
-          docker build -t ghcr.io/${{ github.repository }}_rust:latest .
+          # docker build -t ghcr.io/${{ github.repository }}_rust:latest .
           docker push ghcr.io/${{ github.repository }}:latest
-          docker push ghcr.io/${{ github.repository }}_rust:latest
+          # docker push ghcr.io/${{ github.repository }}_rust:latest
           docker tag ghcr.io/${{ github.repository }}:latest rehosting/${{ github.repository }}:latest
-          docker tag ghcr.io/${{ github.repository }}_rust:latest rehosting/${{ github.repository }}:latest
+          # docker tag ghcr.io/${{ github.repository }}_rust:latest rehosting/${{ github.repository }}:latest
           docker push rehosting/${{ github.repository }}:latest
-          docker push rehosting/${{ github.repository }}_rust:latest
+          # docker push rehosting/${{ github.repository }}_rust:latest
