--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,11 @@ jobs:
     runs-on: rehosting-arc
 
     steps:
+      - name: Trust Harbor's self-signed certificate
+        run: |
+          echo "Fetching certificate from ${{ secrets.REHOSTING_ARC_REGISTRY }}"
+          openssl s_client -showcerts -connect ${{ secrets.REHOSTING_ARC_REGISTRY }}:443 < /dev/null 2>/dev/null | openssl x509 -outform PEM | sudo tee /usr/local/share/ca-certificates/harbor.crt > /dev/null
+          sudo update-ca-certificates
       
       - name: 'Login to Github Container Registry'
         uses: docker/login-action@v3.4.0
@@ -24,19 +29,83 @@ jobs:
           username: rehosting
           password: ${{secrets.DOCKERHUB_TOKEN}}
       
+      - name: Log in to Rehosting Arc Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{secrets.REHOSTING_ARC_REGISTRY}}
+          username: ${{ secrets.REHOSTING_ARC_REGISTRY_USER }}
+          password: ${{ secrets.REHOSTING_ARC_REGISTRY_PASSWORD }}
+      
       - name: 'Checkout code'
         uses: actions/checkout@v4
       
+      - name: Get next version
+        uses: reecetech/version-increment@2023.10.1
+        id: version
+        with:
+          use_api: true
+            
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts: |
+            image=moby/buildkit:master
+            network=host
+          buildkitd-config-inline: |
+            [registry."${{ secrets.REHOSTING_ARC_REGISTRY }}"]
+              insecure = true
+              http = true
+
+      - name: Build embedded-toolchains docker image (rust)
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ github.repository }}:latest
+            ${{ github.repository }}:${{ github.ref_name }}
+            ${{ github.repository }}:${{ steps.version.outputs.v-version }}
+            ghcr.io/${{ github.repository }}:latest
+            ghcr.io/${{ github.repository }}:${{ github.ref_name }}
+            ghcr.io/${{ github.repository }}:${{ steps.version.outputs.v-version }}
+          build-args: |
+            REGISTRY=${{ secrets.REHOSTING_ARC_REGISTRY }}/proxy
+          cache-from: |
+            type=registry,ref=${{secrets.REHOSTING_ARC_REGISTRY}}/rehosting/embedded-toolchains:cache,mode=max
+          cache-to: |
+            type=registry,ref=${{secrets.REHOSTING_ARC_REGISTRY}}/rehosting/embedded-toolchains:cache,mode=max
+          outputs: type=docker
       
-      - name: Build 
-        run: |
-          docker build -t ghcr.io/${{ github.repository }}:latest --target base .
-          # docker build -t ghcr.io/${{ github.repository }}_rust:latest .
-          docker push ghcr.io/${{ github.repository }}:latest
-          # docker push ghcr.io/${{ github.repository }}_rust:latest
-          docker tag ghcr.io/${{ github.repository }}:latest rehosting/${{ github.repository }}:latest
-          # docker tag ghcr.io/${{ github.repository }}_rust:latest rehosting/${{ github.repository }}:latest
-          docker push rehosting/${{ github.repository }}:latest
-          # docker push rehosting/${{ github.repository }}_rust:latest
+      - name: Build embedded-toolchains docker image (rust)
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ github.repository }}_rust:latest
+            ${{ github.repository }}_rust:${{ github.ref_name }}
+            ${{ github.repository }}_rust:${{ steps.version.outputs.v-version }}
+            ghcr.io/${{ github.repository }}_rust:latest
+            ghcr.io/${{ github.repository }}_rust:${{ github.ref_name }}
+            ghcr.io/${{ github.repository }}_rust:${{ steps.version.outputs.v-version }}
+          build-args: |
+            REGISTRY=${{ secrets.REHOSTING_ARC_REGISTRY }}/proxy
+          cache-from: |
+            type=registry,ref=${{secrets.REHOSTING_ARC_REGISTRY}}/rehosting/embedded-toolchains:cache,mode=max
+          cache-to: |
+            type=registry,ref=${{secrets.REHOSTING_ARC_REGISTRY}}/rehosting/embedded-toolchains:cache,mode=max
+
+      - name: Create release
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        uses: softprops/action-gh-release@v2.0.8
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ steps.version.outputs.v-version }}
+          name: Release ${{ steps.version.outputs.v-version }}
+          body: |
+            Release ${{ steps.version.outputs.v-version }}
+          draft: false
+          generate_release_notes: true
+          prerelease: false
+          files: igloo_driver.tar.gz
