--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -68,7 +68,7 @@ jobs:
             ghcr.io/${{ github.repository }}:latest
             ghcr.io/${{ github.repository }}:${{ github.ref_name }}
             ghcr.io/${{ github.repository }}:${{ steps.version.outputs.v-version }}
-          target: base
+          target: final
           build-args: |
             REGISTRY=${{ secrets.REHOSTING_ARC_REGISTRY }}/proxy
           cache-from: |
@@ -82,6 +82,7 @@ jobs:
         with:
           context: .
           push: true
+          target: rust
           tags: |
             ${{ github.repository }}_rust:latest
             ${{ github.repository }}_rust:${{ github.ref_name }}
@@ -110,3 +111,64 @@ jobs:
           generate_release_notes: true
           prerelease: false
           files: igloo_driver.tar.gz
+
+  build-arch:
+    runs-on: rehosting-arc
+    needs: build
+    strategy:
+      matrix:
+        arch: [i686, x86_64, mipseb, mipsel, mips64eb, mips64el, arm, armhf, arm64, riscv32, riscv64, ppc, ppcle, ppc64, ppc64le, loongarch64]
+    steps:
+      - name: 'Checkout code'
+        uses: actions/checkout@v4
+      
+      - name: Get next version
+        uses: reecetech/version-increment@2023.10.1
+        id: version
+        with:
+          use_api: true
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Trust Harbor's self-signed certificate
+        run: |
+          echo "Fetching certificate from ${{ secrets.REHOSTING_ARC_REGISTRY }}"
+          openssl s_client -showcerts -connect ${{ secrets.REHOSTING_ARC_REGISTRY }}:443 < /dev/null 2>/dev/null | openssl x509 -outform PEM | sudo tee /usr/local/share/ca-certificates/harbor.crt > /dev/null
+          sudo update-ca-certificates
+
+      - name: Login to registries
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: rehosting
+          password: ${{secrets.DOCKERHUB_TOKEN}}
+
+      - name: Log in to Rehosting Arc Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{secrets.REHOSTING_ARC_REGISTRY}}
+          username: ${{ secrets.REHOSTING_ARC_REGISTRY_USER }}
+          password: ${{ secrets.REHOSTING_ARC_REGISTRY_PASSWORD }}
+
+      - name: Build and push ${{ matrix.arch }} image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ github.repository }}_${{ matrix.arch }}:latest
+            ${{ github.repository }}_${{ matrix.arch }}:${{ github.ref_name }}
+            ${{ github.repository }}_${{ matrix.arch }}:${{ steps.version.outputs.v-version }}
+            ghcr.io/${{ github.repository }}_${{ matrix.arch }}:latest
+            ghcr.io/${{ github.repository }}_${{ matrix.arch }}:${{ github.ref_name }}
+            ghcr.io/${{ github.repository }}_${{ matrix.arch }}:${{ steps.version.outputs.v-version }}
+          target: ${{ matrix.arch }}
+          build-args: |
+            REGISTRY=${{ secrets.REHOSTING_ARC_REGISTRY }}/proxy
