--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -137,9 +137,6 @@ jobs:
             [registry."${{ secrets.REHOSTING_ARC_REGISTRY }}"]
               insecure = true
               http = true
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
       
       - name: Trust Harbor's self-signed certificate
         run: |
@@ -180,5 +177,9 @@ jobs:
             ghcr.io/${{ github.repository }}_${{ matrix.arch }}:${{ github.ref_name }}
             ghcr.io/${{ github.repository }}_${{ matrix.arch }}:${{ steps.version.outputs.v-version }}
           target: ${{ matrix.arch }}
+          cache-from: |
+            type=registry,ref=${{secrets.REHOSTING_ARC_REGISTRY}}/${{ github.repository }}:${{ matrix.arch }}_cache,mode=max
+          cache-to: |
+            type=registry,ref=${{secrets.REHOSTING_ARC_REGISTRY}}/${{ github.repository }}:${{ matrix.arch }}_cache,mode=max
           build-args: |
             REGISTRY=${{ secrets.REHOSTING_ARC_REGISTRY }}/proxy
