--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -116,7 +116,7 @@ jobs:
     runs-on: rehosting-arc
     strategy:
       matrix:
-        arch: [i686, x86_64, mipseb, mipsel, mips64eb, mips64el, armel, armhf, arm64, riscv32, riscv64, ppc, ppcle, ppc64, ppc64le, loongarch64]
+        arch: [armel, arm64, mipseb, mipsel, mips64eb, mips64el, powerpc, powerpcle, powerpc64, powerpc64le, loongarch64, riscv64, x86_64]
     steps:
       - name: 'Checkout code'
         uses: actions/checkout@v4
